added functionality for the buttons

--- a/game.html
+++ b/game.html
@@ -24,7 +24,7 @@
 	 	<p> you have: $100 </p>
 	 	<p> <br/>   <button class="link" id = "risk">risk it?</button></p>
 	 	<p>   <button class="link" id = "tip">tip it?</button> </p>
-	 	<p>   <button class="link" id = "switch">switch?</button> </p>
+	 	<p>   <button class="link" id = "redeal">redeal it?</button> </p>
 
 	 </div><!--end of column_two-->
 
